lecture as given today

--- a/lectures/lecture-05/1 - Classes.ipynb
+++ b/lectures/lecture-05/1 - Classes.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,16 +36,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a: 1\n",
+      "b: 2\n"
+     ]
+    }
+   ],
    "source": [
     "my_func(1,2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,16 +66,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arg0: 1\n",
+      "arg1: 2\n",
+      "arg2: None\n"
+     ]
+    }
+   ],
    "source": [
     "my_func(1,2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,22 +94,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def my_func(arg0, arg1=None, arg2=None):\n",
-    "    if arg1 is None and arg2 is None:\n",
+    "    if arg1 == None and arg2 == None:\n",
     "        y = np.array(arg0)\n",
-    "        assert y.ndim == 1\n",
-    "        assert y.shape[0] > 1\n",
     "        x = np.arange(len(y))\n",
-    "    elif not arg1 is None and arg2 is None:\n",
+    "    elif arg1 != None and arg2 == None:\n",
     "        x = np.array(arg0)\n",
     "        y = np.array(arg1)\n",
-    "        assert y.ndim == 1\n",
-    "        assert x.shape == y.shape\n",
     "    else:\n",
+    "        assert arg1 != None\n",
+    "        assert arg2 != None\n",
+    "        x = np.array(arg0)\n",
+    "        y = np.array(arg1)        \n",
+    "        # this is where we handle arg2 for formatting.\n",
     "        raise NotImplementedError()\n",
     "    print(f\"x: {x}\")\n",
     "    print(f\"y: {y}\")"
@@ -98,9 +118,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: [0 1 2]\n",
+      "y: [10  9 10]\n",
+      "\n",
+      "x: [1 3 5]\n",
+      "y: [10  9 10]\n"
+     ]
+    }
+   ],
    "source": [
     "my_func( (10,9,10) )\n",
     "\n",
@@ -110,29 +142,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "range(10)"
+    "list(range(10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "range(2, 10)"
+    "list(range(2, 10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "range(2, 10, 2)"
+    "list(range(2, 10, 2))"
    ]
   },
   {
@@ -146,13 +211,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "class MyClass:\n",
-    "    def my_function(self):\n",
-    "        print(\"This was printed from a function inside the class.\")"
+    "    def my_method(self):\n",
+    "        print(\"This was printed from a method inside the class.\")"
    ]
   },
   {
@@ -164,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,11 +238,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This was printed from a method inside the class.\n"
+     ]
+    }
+   ],
    "source": [
-    "x.my_function()"
+    "x.my_method()"
    ]
   },
   {
@@ -194,27 +267,37 @@
     "\n",
     "## Creating an instance of a class\n",
     "\n",
-    "Class definitions can have a special function caled `__init__()`. This initialization method, also called constructor, is called when an instance of a class is created. It is used to store variables and perform other setup."
+    "Class definitions can have a special method caled `__init__()`. This initialization method, also called constructor, is called when an instance of a class is created. It is used to store variables and perform other setup."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My variable is foo.\n",
+      "My variable is bar.\n"
+     ]
+    }
+   ],
    "source": [
     "class MyClass:\n",
     "    def __init__(self):\n",
     "        self.my_variable = \"foo\"\n",
-    "    def my_function(self):\n",
+    "    def my_method(self):\n",
     "        print(\"My variable is {}.\".format(self.my_variable))\n",
     "    def set_var(self,new_value):\n",
     "        self.my_variable = new_value\n",
     "        \n",
     "x = MyClass()\n",
-    "x.my_function()\n",
+    "x.my_method()\n",
+    "\n",
     "x.set_var(\"bar\")\n",
-    "x.my_function()"
+    "x.my_method()"
    ]
   },
   {
@@ -228,17 +311,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The insect (species Bombus terrestris) has a mass of 200 milligrams.\n",
+      "The insect (species Bombus terrestris) has a mass of 205 milligrams.\n",
+      "The insect (species Apis mellifera) has a mass of 100 milligrams.\n",
+      "The insect (species Tarantula gigantus) has a mass of 10 grams.\n"
+     ]
+    }
+   ],
    "source": [
     "class Insect:\n",
-    "    def __init__(self, species_name, mass):\n",
+    "    def __init__(self, species_name, mass, mass_units='milligrams'):\n",
     "        self.species_name = species_name\n",
     "        self.mass = mass\n",
+    "        self.mass_units = mass_units\n",
     "    def print_description(self):\n",
-    "        print(\"The insect (species {}) has a mass of {} milligrams.\".format(\n",
-    "            self.species_name, self.mass))\n",
+    "        print(\"The insect (species {}) has a mass of {} {}.\".format(\n",
+    "            self.species_name, self.mass, self.mass_units))\n",
     "    def eat(self,amount):\n",
     "        # (This could alternatively be done with `self.mass += amount`.)\n",
     "        self.mass = self.mass + amount\n",
@@ -253,11 +348,14 @@
     "\n",
     "y = Insect(\"Apis mellifera\", 100)\n",
     "y.print_description()\n",
-    "y.eat(10)\n",
-    "y.print_description()\n",
+    "# y.eat(10)\n",
+    "# y.print_description()\n",
     "\n",
-    "print(x.mass)\n",
-    "print(y.mass)"
+    "z = Insect(\"Tarantula gigantus\", 10, mass_units=\"grams\") # yes, it's not really an insect...\n",
+    "z.print_description()\n",
+    "\n",
+    "# print(x.species_name,x.mass)\n",
+    "# print(y.species_name,y.mass)"
    ]
   },
   {
@@ -269,9 +367,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bombus terrestris\n"
+     ]
+    }
+   ],
    "source": [
     "print(x.species_name)"
    ]
